@@ -1,9 +1,11 @@
 QMicroz v0.4
 * It is now possible to request extended information about items contained in the archive.
     For example, get the modification date or compressed/uncompressed size.
+* The file extracted to the buffer (struct BufFile) now also contains the modification date.
+* Several helper functions have been added to make working with the archive easier.
 * Header files merged.
     (qmicroz_global.h --> qmicroz.h)
-* Some functions have been renamed.
+* Some functions and types have been renamed.
 
 ---
 QMicroz v0.3
